--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
 
 <body>
     <h1>Welcome to Ideal School & College!!!</h1>
+    <div>
+        <img src="images/logot.png" alt="">
+    </div>
+    <div class="link">
+        <a href="#">Home</a>
+        <a href="#">Address</a>
+        <a href="#">Teachers</a>
+        <a href="#">Contact</a>
+    </div>
 </body>
 
 </html>
