--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <h1>Welcome to Ideal School & College!!!</h1>
+    <h1>Welcome to <span>Ideal School & College</span>!!!</h1>
     <div>
         <img src="images/logot.png" alt="">
     </div>
